# foxibot

./: .clang-format  .gitignore  LICENSE
.github/workflows/: ci.yml
foxibot_common/: CMakeLists.txt  package.xml
foxibot_common/include/foxibot_common/: types.hpp
foxibot_common/test/: test_types.cpp
foxibot_kinematics/: CMakeLists.txt  package.xml
foxibot_kinematics/docs/: conventions.md
foxibot_kinematics/include/foxibot_kinematics/: leg_kinematics.hpp  leg_model.hpp
foxibot_kinematics/src/: leg_kinematics.cpp
foxibot_math/: CMakeLists.txt  package.xml
foxibot_math/include/foxibot_math/: angles.hpp  interpolation.hpp  trapezoidal_profile.hpp  types.hpp
foxibot_math/src/: trapezoidal_profile.cpp
foxibot_math/test/: test_angles.cpp  test_interpolation.cpp  test_trapezoidal_profile.cpp
