<?xml version="1.0"?>
<package format="3">
  <name>foxibot_common</name>
  <version>0.1.0</version>
  <description>Types de base et utilitaires transverses Foxibot</description>
  <maintainer email="toi@example.com">Ton Nom</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
