<?xml version="1.0"?>
<package format="3">
  <name>foxibot_kinematics</name>
  <version>0.1.0</version>
  <description>Forward and inverse leg kinematics for Foxibot</description>
  <maintainer email="cekici.gabriel@gmail.com">
    gabriel cekici
  </maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>foxibot_common</depend>
  <depend>foxibot_math</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>